--- a/index.html
+++ b/index.html
@@ -9,6 +9,71 @@
   <script src="javascript.js" defer></script>
 </head>
 <body>
-  
+  <header class="header">
+    <div class="container">
+      <nav class="navigation_nav">
+        <ul class="navigation_list">
+          <li><a href="#about_me">Обо мне</a></li>
+          <li><a href="#education">Образование</a></li>
+          <li><a href="#projects">Проекта</a></li>
+          <li><a href="#hobbies">Хобби</a></li>
+          <li><a href="#contact">Связь</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="main">
+    <section id="about_me" class="about_me">
+      <div class="container">
+        <img src="images/me.jpg" alt="Моё фото" class="me_foto">
+        <div class="me">
+          <h2 class="me_name">Обо мне</h2>
+          <div>Привет, меня зовут Влад, я студент 3 курса и начинающий Front-end разработчик. 
+            Этот сайт является визиткой и отработкой навыков полученных при изучении front-end. 
+            Он написан на html и css с импользованием Javascript, после изучения React, он будет переписан на нём</div>
+        </div>
+      </div>
+    </section>
+
+    <section id="education" class="education">
+      <div class="container">
+        <h2>Образование</h2>
+        <div class="VGTU">
+          <h3>Воронежсний гусударственный технический университет, Воронеж</h3>
+          <p>Факультет информационных технологий и компьютерной безопасности</p>
+          <p>Направление - Информатика и вычислительная техника</p>
+          <p>Профиль - Программное обеспечение автоматизированных систем</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects" class="projects">
+      <div class="container">
+        <div class="json_viewer">
+          <p>Json viewer</p>
+        </div>
+      <div class="pvz_site">
+        <p>PvZ сайт</p>
+      </div>
+      </div>
+    </section>
+
+    <section id="hobbies" class="hobbies">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section id="contact" class="contact">
+      <div class="container">
+        
+      </div>
+    </section>
+
+    <footer class="footer">
+
+    </footer>
+  </main>
 </body>
 </html>
