feat: modification of structure css and starting work on projects style

--- a/index.html
+++ b/index.html
@@ -50,10 +50,17 @@
 
     <section id="projects" class="projects">
       <div class="container">
-        <div class="json_viewer">
-          <p>Json viewer</p>
+        <h2>Мои проекты</h2>
+        <div class="json_viewer block_project">
+          <video class="back_video" autoplay muted loop>
+            <source src="media/Проект.mp4" type="video/mp4">
+          </video>
+          <div class="json_viewer_description">
+            <h3>Json viewer</h3>
+            <p>Разработка модуля для отображение текста в древовидной стуктуре</p>
+          </div>
         </div>
-      <div class="pvz_site">
+      <div class="pvz_site block_project">
         <p>PvZ сайт</p>
       </div>
       </div>
@@ -61,13 +68,13 @@
 
     <section id="hobbies" class="hobbies">
       <div class="container">
-
+        <h2>Мои увлечения</h2>
       </div>
     </section>
 
     <section id="contact" class="contact">
       <div class="container">
-        
+        <h2>Контакты</h2>
       </div>
     </section>
 
