feat: new style for header

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <header class="header">
     <div class="container">
-      <nav class="navigation_nav">
-        <ul class="navigation_list">
+      <nav class="header_nav">
+        <ul class="header_list">
           <li><a href="#about_me">Обо мне</a></li>
           <li><a href="#education">Образование</a></li>
           <li><a href="#projects">Проекта</a></li>
@@ -60,9 +60,12 @@
             <p>Разработка модуля для отображение текста в древовидной стуктуре</p>
           </div>
         </div>
-      <div class="pvz_site block_project">
-        <p>PvZ сайт</p>
-      </div>
+        <div class="pvz_site block_project">
+          <div class="pvz_site_description">
+          <h3>PvZ сайт</h3>
+
+          </div>
+        </div>
       </div>
     </section>
 
